// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inspects multiple rego files 1`] = `
[
  {
    "annotations": {
      "custom": {
        "failure_msg": "Task '%s' does not contain a bundle reference",
        "short_name": "disallowed_task_reference",
      },
      "description": "Check for existence of a task bundle. Enforcing this rule will
fail the contract if the task is not called from a bundle.",
      "scope": "rule",
      "title": "Task bundle was not used or is not defined",
    },
    "location": {
      "col": 1,
      "file": StringMatching /\\.\\*__test__\\\\/example\\\\\\.rego/,
      "row": 12,
    },
    "path": [
      {
        "type": "var",
        "value": "data",
      },
      {
        "type": "string",
        "value": "example",
      },
      {
        "type": "string",
        "value": "deny",
      },
    ],
  },
  {
    "annotations": {
      "custom": {
        "short_name": "example2",
      },
      "description": "Second example",
      "scope": "rule",
      "title": "Example 2",
    },
    "location": {
      "col": 1,
      "file": StringMatching /\\.\\*__test__\\\\/example2\\\\\\.rego/,
      "row": 8,
    },
    "path": [
      {
        "type": "var",
        "value": "data",
      },
      {
        "type": "string",
        "value": "example2",
      },
      {
        "type": "string",
        "value": "deny",
      },
    ],
  },
]
`;

exports[`inspects rego files 1`] = `
[
  {
    "annotations": {
      "custom": {
        "failure_msg": "Task '%s' does not contain a bundle reference",
        "short_name": "disallowed_task_reference",
      },
      "description": "Check for existence of a task bundle. Enforcing this rule will
fail the contract if the task is not called from a bundle.",
      "scope": "rule",
      "title": "Task bundle was not used or is not defined",
    },
    "location": {
      "col": 1,
      "file": "example.rego",
      "row": 12,
    },
    "path": [
      {
        "type": "var",
        "value": "data",
      },
      {
        "type": "string",
        "value": "example",
      },
      {
        "type": "string",
        "value": "deny",
      },
    ],
  },
]
`;

exports[`inspects rego files read from the filesystem 1`] = `
[
  {
    "annotations": {
      "custom": {
        "failure_msg": "Task '%s' does not contain a bundle reference",
        "short_name": "disallowed_task_reference",
      },
      "description": "Check for existence of a task bundle. Enforcing this rule will
fail the contract if the task is not called from a bundle.",
      "scope": "rule",
      "title": "Task bundle was not used or is not defined",
    },
    "location": {
      "col": 1,
      "file": StringMatching /\\.\\*__test__\\\\/example\\\\\\.rego/,
      "row": 12,
    },
    "path": [
      {
        "type": "var",
        "value": "data",
      },
      {
        "type": "string",
        "value": "example",
      },
      {
        "type": "string",
        "value": "deny",
      },
    ],
  },
]
`;

exports[`inspects rego files second time 1`] = `
[
  {
    "annotations": {
      "custom": {
        "failure_msg": "Task '%s' does not contain a bundle reference",
        "short_name": "disallowed_task_reference",
      },
      "description": "Check for existence of a task bundle. Enforcing this rule will
fail the contract if the task is not called from a bundle.",
      "scope": "rule",
      "title": "Task bundle was not used or is not defined",
    },
    "location": {
      "col": 1,
      "file": "example.rego",
      "row": 12,
    },
    "path": [
      {
        "type": "var",
        "value": "data",
      },
      {
        "type": "string",
        "value": "example",
      },
      {
        "type": "string",
        "value": "deny",
      },
    ],
  },
]
`;
